@@ -1,8 +1,8 @@
-38f0c4f1b56869e460f50843507de0e7 *ChangeLog
-dedf7aa25c0d5e98b942283c700ea58c *DESCRIPTION
+3a20f97988823a5ff01bae9e1273804c *ChangeLog
+79a5df94633d8a98d95b69491f755f2d *DESCRIPTION
 da2d092bcef8a05ed9d7c4b066a44c31 *LICENSE
-a250f85a14f8936d6dbb5d35b2762a5b *NAMESPACE
-70607de5e05a60dec96b08796dda8320 *R/Rmalschains-package.R
+62d40f01a965d961d4573fadf652dd9d *NAMESPACE
+11eb87837ce4d496fbd5e14771d70b56 *R/Rmalschains-package.R
 e7ed4d686ab109f3780d6e9aa43d21a0 *R/malschains.R
 bd22f6306e0327208a3e5a3222f44137 *demo/00Index
 34861a7124707256a6ca8b2978d598a5 *demo/claw.R
@@ -11,18 +11,18 @@ e9b580a350e1b196684d3926a4452cb7 *demo/rastrigin_highDim.R
 7345c05e3508e10768abe2cfabceef73 *demo/rastrigin_inline.R
 1dc5af84ba872837547e48b7cf624b31 *demo/sphere.R
 969fac3689054f843f79619f45a65b1e *inst/CITATION
-fe1289a39d508dfacad827432cddfd6e *man/Rmalschains-package.Rd
-0f7f9438d754859c3f593991333c84e2 *man/malschains.Rd
-d9358a4fb3860d3eece59731ab13a19b *man/malschains.control.Rd
-1b5ca0e850127f282562ccf5776b848f *man/print.malschains.Rd
+8e54960c817d2f0b1b1b42e193b6d38e *man/Rmalschains-package.Rd
+450579c2074063ea94706e84d976c4fa *man/malschains.Rd
+3c8d3226b34aeca687fd94b16398a225 *man/malschains.control.Rd
+fee6d532d1cc55b1ed044c3610db3aab *man/print.malschains.Rd
 0c0e8da9d5c30727e7fd87ab49a4e1bb *src/ConfigFile.cc
 1fcd1971aa894c25ed4d1b9ccba7e054 *src/ConfigFile.h
-1beb611ae51271c8c7cfecc858b35c5f *src/Makevars
-77b6b8a65cc942ebb3e432407c3799e3 *src/Makevars.win
-2e114a91070428e990f5c16a52450305 *src/RmalschainsEvaluate.h
-e3472e3067a0348b175883a2a7de2d42 *src/RmalschainsWrapper.cpp
+1435db163bbf2f4c633aad238c361d50 *src/Makevars
+028241e83236ba85d9e114d20ade5d52 *src/Makevars.win
+a6b6c0e6184115f70e02db6f4c54550f *src/RmalschainsEvaluate.h
+22f4e9848ab727630926a0aa016983b7 *src/RmalschainsWrapper.cpp
 d8cad1cd36bc42bd8acd871f8d242ad4 *src/Rmalschains_init.c
-5760d3fd1a6a75c08657efc7d32e5306 *src/bandmat.cpp
+ca743326a55889442ec87d82de09ccf6 *src/bandmat.cpp
 7373634f8719d74e06426e53dae81dfd *src/chc.cc
 da3a4faf3d068f92caab40e54cbddac9 *src/chc.h
 ad11e7c3883714cb554e2db2826dfea2 *src/cholesky.cpp
@@ -51,7 +51,7 @@ f418cc9aff271da11fba1271e7342275 *src/ea.cc
 accc1bee64fcb0030aed5b9b80f11d6c *src/ea.h
 a237dcbb96f444290a64c0915e55c2c4 *src/evalue.cpp
 ea60599cdee28453bed0949967ba78ba *src/fft.cpp
-8c5ddc5e65a78fdc6665213ca9eeeb3a *src/get_util.cc
+6b9de2936637f7ed97b87b5e504edbe4 *src/get_util.cc
 1bcf72dcbc616c61e1372c6956e79e78 *src/get_util.h
 6e3cc2e94f95db68fcd66910740478c7 *src/hholder.cpp
 bccc4ec7abbf83a6af9c0c11889fc5ba *src/hybrid.cc
@@ -101,13 +101,13 @@ b96bffb44183fa845da75698c4a62cf8 *src/myexcept.h
 fc837140049fb503b9bfdc724fafa535 *src/newfft.cpp
 015347dc9532d16c8cfa01986c783f1e *src/newmat.h
 56df3927da62eea1e585ca2ae36564c2 *src/newmat1.cpp
-44ffb0371568431109af25921155a68d *src/newmat2.cpp
-560cfd20cda9ec8ac8271e2449fc40b3 *src/newmat3.cpp
+fac2e42f39a8c277e99af6f82cb31384 *src/newmat2.cpp
+bb2f95358cec04e1b53a120c2f6cbc69 *src/newmat3.cpp
 045416d8772e79358d386d5d15c3f07c *src/newmat4.cpp
-5e0c80fd51e1a166d27ac7e9a9730e52 *src/newmat5.cpp
+2a98924b201cb658ab9d5c10d3fc650d *src/newmat5.cpp
 50f96ddd3665dc9a31512d2927e10034 *src/newmat6.cpp
-675b004745008ab985019eb2bf5bb910 *src/newmat7.cpp
-f64c8decc5c1f56c7b822157483bb406 *src/newmat8.cpp
+9fd2513429ac4f40e459b9f05f8a77c3 *src/newmat7.cpp
+68ac0d08d0ad2eb9616dbe8e20894169 *src/newmat8.cpp
 66e15299015ddc6aa589c6cc493a20a7 *src/newmat9.cpp
 1f7e78f98488b981f3ccd9156d2f8e14 *src/newmatap.h
 a6cce22783f95a77dec0eeb6bf454447 *src/newmatex.cpp
@@ -122,7 +122,7 @@ e213ebe08e7a01efbe5a4747108d3dd2 *src/newutil.h
 eea005c9abd5bcdda30f91ff87a6df84 *src/nm_misc.cpp
 2631924838feca1191f66fc6c7076a7e *src/orandom.cc
 654aee31e87aaac7c28150bbaddc26e1 *src/orandom.h
-2b51e753ec7c57bdc8c945190974c6a9 *src/origcmaes.cc
+52598d398920cbaa7e34be679cdf6f51 *src/origcmaes.cc
 384a92b5c2472851644ade30e3689962 *src/origcmaes.h
 4d7684f8d1a83ca5098e48bc1e05629e *src/popobserver.h
 6c50472382093c8db901b80164edd945 *src/populationchc.cc
@@ -141,7 +141,7 @@ fe2ac66d8f6248d974792bf8d8cba062 *src/populationpso.cc
 ec730badc8dfaf078eb88fbc80fd4494 *src/populationreal.h
 528bde013d8236338834eb0543bab4d6 *src/precisio.h
 a5ee5136c6fa08bebe533b7d51eec09a *src/problem.cc
-3bfec50ce433bf8c210af048bc66983b *src/problem.h
+b9b699e54daee7f8f2dfa696d100c859 *src/problem.h
 49ca674e8d71fe81d3f378374650235d *src/problemfactory.h
 823f69af8d7a33ef53772cece7b4a27a *src/pso.cc
 f01e11f47572d7ead96c0c1e8017a952 *src/pso.h
@@ -167,13 +167,13 @@ ccabe402d6c493c4c01fbdccb3cc596c *src/running.h
 4cbb949d97c4af5fb7985893a01a56bd *src/selectlsimp.h
 959bbbde23d2e7729699ed7956611f0b *src/signal.cc
 c59aaddbe4d647ba7da9ddab7dce190e *src/signal.h
-1640cb0300a7f36db751880e33ede2cb *src/simplex.cc
+dec1b103a4c9200be0a52115f7f6acd1 *src/simplex.cc
 1cb8249b9af612cb5a03cf03ecc20ecf *src/simplex.h
-0d085f26fcf3ce657fa800438e37ce7a *src/solis.cc
+c07fec370c9b84e3bbbb9cbc5bc043d4 *src/solis.cc
 b9ba2aa3779a46673d3d886baaf7d703 *src/solis.h
-f683c0805d1e6b0ccdcf9e1a93e6981d *src/solisn.cc
+b74d18be7fe0d49a978f0e12fbef81c7 *src/solisn.cc
 06a987ed5419fdabe3d287cd73b8f4e0 *src/solisn.h
-ec746f4b3c7e791517007dac9f719f71 *src/solisn2.cc
+ab1b329799e612db5e462279daaf9de3 *src/solisn2.cc
 ad1984806d239401b065567367f43d51 *src/solisn2.h
 e1e4e323cad89f01db9a73f447d580e5 *src/sort.cpp
 2680377c6b853c7a11852365a9c7d4b7 *src/srandom.cc
