@@ -5,4 +5,4 @@ export(malschains)
 export(malschains.control)
 import(Rcpp)
 importFrom(stats,runif)
-useDynLib(Rmalschains,.registration=TRUE)
+useDynLib(Rmalschains, .registration=TRUE)
