@@ -1,3 +1,5 @@
+CXX_STD = CXX11
+
 PKG_CPPFLAGS=-I. -DNDEBUG -DR_USE_C99_IN_CXX
 
 ## Use the R_HOME indirection to support installations of multiple R version
